@@ -1,6 +1,15 @@
 2014-07-24  Tom Tromey  <tromey@redhat.com>
 	    Gary Benson  <gbenson@redhat.com>
 
+	* common/common-types.h: New file.
+	* Makefile.in (HFILES_NO_SRCDIR): Add common/common-types.h.
+	* nat/linux-ptrace.c: Include common-types.h.
+	* defs.h: Include common-types.h.
+	(gdb_byte, CORE_ADDR, CORE_ADDR_MAX, LONGEST, ULONGEST): Remove.
+
+2014-07-24  Tom Tromey  <tromey@redhat.com>
+	    Gary Benson  <gbenson@redhat.com>
+
 	* common/errors.h: New file.
 	* common/errors.c: Likewise.
 	* Makefile.in (HFILES_NO_SRCDIR): Add common/errors.h.
